Add route to load from pages, fix bug in calendar snippet.

--- a/ssfl/templates/base/nav.jinja2
+++ b/ssfl/templates/base/nav.jinja2
@@ -98,6 +98,10 @@
                             Manage JSON templates
                         </a>
                         <hr class="navbar-divider">
+                        <a class="navbar-item" href="{{ url_for('admin_bp.sst_import_database') }}">
+                            Manage Import from Wordpress Database
+                        </a>
+                        <hr class="navbar-divider">
                         <a class="navbar-item">
                             Report an issue
                         </a>
