--- a/ssfl/templates/base/picture.jinja2
+++ b/ssfl/templates/base/picture.jinja2
@@ -1,14 +1,14 @@
-<div class="{{ photo.css_class }}">
-    <figure>
+<div class="{{ photo.css_class }} float-left px-3">
+    <figure class="figure">
         {%  if photo.title %}
-            <figcaption class="{{ photo.title_class }}">{{ photo.title }}</figcaption>
+            <figcaption class="figure-caption has-text-black {{ photo.title_class }}">{{ photo.title }}</figcaption>
         {% endif %}
-        <img class="{{ photo.image_class }}"
+        <img class="{{ photo.image_class }} figure-img img-fluid rounded"
              src="{{ photo.url }}?h={{ photo.height }}&w={{ photo.width }}"
              align="{{ photo.alignment }}"
              height="{{ photo.height }}"
              width="{{ photo.width }}"
              alt="{{ photo.alt_text }}"/>
-        <figcaption class="{{ photo.caption_class }}">{{ photo.caption }}</figcaption>
+        <figcaption class="figure-caption has-text-black photo.caption_class }}">{{ photo.caption }}</figcaption>
     </figure>
 </div>
