--- a/ssfl/templates/base/slideshow.jinja2
+++ b/ssfl/templates/base/slideshow.jinja2
@@ -1,5 +1,5 @@
 <div>
-    {% if slideshow.title %}
+    {% if slideshow.title and slideshow.title != 'NO NAME' %}
         <figcaption class="{{ slideshow.title_class }}">{{ slideshow.title }}</figcaption>
     {% endif %}
     <div class="slideshow" interval="{{ slideshow.rotation }}">
