Added ability to associate documentation with entries in admin templates.

--- a/ssfl/templates/base/form_entry.jinja2
+++ b/ssfl/templates/base/form_entry.jinja2
@@ -5,7 +5,12 @@
                  element placeholder: el_placeholder  (optional)
 -->
 
-<div class="el_class" style="margin-top: 10px;margin-bottom: 10px">
+<div class="el_class container pt-3 border border-dark w-50" >
+    {% if el_name.render_kw['docs'] %}
+        {% for comment in el_name.render_kw['docs'] %}
+            <p class="font-weight-bolder small">{{ comment }}</p>
+        {% endfor %}
+    {% endif %}
     {{ el_name.label }}
     {% if el_placeholder %}
         {{ el_name(placeholder=el_placeholder) }}
