--- a/ssfl/templates/base/layout.jinja2
+++ b/ssfl/templates/base/layout.jinja2
@@ -17,11 +17,12 @@
     {% assets "js_bundle" %}
         <script type="text/javascript" src="{{ ASSET_URL }}"></script>
     {% endassets %}
-
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/static/dist/bundle.js"></script>
+    <script type="text/javascript" src="/static/js/sst_javascript.js"></script>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 
 </head>
