Some clean-up, minor fixes

--- a/ssfl/templates/admin/manage_photos.jinja2
+++ b/ssfl/templates/admin/manage_photos.jinja2
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!-- Route: '/admin/manageTemplate' => make_story_json_template
-     Template: json_make_template.jinja2
-     Form: db_manage_templates_form.py
-     Processor: manage_json_template.py
-     Functions:
+<!--
+     Route: '/admin/manage_photos' => manage_photo_functions
+     Template: manage_photos.jinja2
+     Form: manage_photo_functions_form.py
+     Processor: manage_photo_functions.py
 -->
 {% extends 'base/layout.jinja2' %}
 
