--- a/ssfl/templates/base/slideshow.jinja2
+++ b/ssfl/templates/base/slideshow.jinja2
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <div>
     {% if slideshow.title and slideshow.title != 'NO NAME' %}
         <figcaption class="{{ slideshow.title_class }}">{{ slideshow.title }}</figcaption>
