--- a/ssfl/templates/main/snippet_calendar.jinja2
+++ b/ssfl/templates/main/snippet_calendar.jinja2
@@ -1,5 +1,5 @@
-<div class="">
-    <div class="title">Upcoming Events</div>
+<div class="title">Upcoming Events</div>
+<div>
     {% for event in calendar.events %}
         <div class="mt-3">
             <p class="h6">{{ event.name }}</p>
