--- a/ssfl/templates/base/nav.jinja2
+++ b/ssfl/templates/base/nav.jinja2
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3 sticky-top" role="navigation" aria-label="main navigation">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3 sticky-top" role="navigation" aria-label="main navigation"
+style="position: sticky">
     <div class="container">
         <div class="navbar-brand mr-3">
             <a class="navbar-item" href="https://sunnyside.cc">
