--- a/ssfl/templates/main/snippet_slideshow.jinja2
+++ b/ssfl/templates/main/snippet_slideshow.jinja2
@@ -1,8 +1,11 @@
+<!DOCTYPE html>
 {% if story.title %}
     <div class="title">{{ story.title | safe }}</div>
 {% endif %}
 {#<div style="max-width:{{ story.photo.width }}px; float:{{ story.photo.alignment }}">#}
-<div>
-    {% set slideshow = story.slides %}
-    {% include 'base/slideshow.jinja2' %}
+<div >
+    {% with %}
+        {% set slideshow = story.slides %}
+        {% include 'base/slideshow.jinja2' %}
+    {% endwith %}
 </div>
