--- a/ssfl/templates/base/layout.jinja2
+++ b/ssfl/templates/base/layout.jinja2
@@ -27,7 +27,7 @@
 
 </head>
 <body>
-<div class="container-fluid">
+<div class="container-fluid text-dark">
     {% include 'base/nav.jinja2' %}
     {% set flash_message_type = 'error' %}
     {% include 'base/flashed_messages.jinja2' %}
