--- a/ssfl/templates/main/snippet_calendar.jinja2
+++ b/ssfl/templates/main/snippet_calendar.jinja2
@@ -2,7 +2,7 @@
 <div>
     {% for event in calendar.events %}
         <div class="mt-3">
-            <p class="h6">{{ event.name }}</p>
+            <p class="h5 font-weight-bold">{{ event.name }}</p>
             <p class="my-0">{{ event.date }} {{ event.time }}</p>
             <p class="my-0">{{ event.venue }}</p>
         </div>
