--- a/ssfl/templates/main/snippet_story.jinja2
+++ b/ssfl/templates/main/snippet_story.jinja2
@@ -1,5 +1,5 @@
 {% if story.title %}
-    <div class="title">{{ story.title | safe }}</div>
+    <div class="title text-center">{{ story.title | safe }}</div>
 {% endif %}
 <div style="max-width:{{ story.photo.width }}px; float:{{ story.photo.alignment }}">
     {% set photo = story.photo %}
