--- a/ssfl/templates/admin/edit.jinja2
+++ b/ssfl/templates/admin/edit.jinja2
@@ -51,10 +51,14 @@
                 </div>
                 {% if form.errors %}
                     <ul class="errors">
-                        {% for error in form.errors.keys() %}
-                            {% for specific in form.errors[error] %}
-                                <li>{{ error }} : {{ specific }}</li>
-                            {% endfor %}
+                        {% for error, val in form.errors.items() %}
+                            {% if val is iterable and val is string %}
+                                <li>{{ error }} : {{ val }}</li>
+                            {% else %}
+                                {% for val_el in val %}
+                                     <li>{{ error }} : {{ val_el }}</li>
+                                {% endfor %}
+                            {% endif %}
                         {% endfor %}
                     </ul>
                 {% endif %}
