--- a/ssfl/templates/admin/manage_photos.jinja2
+++ b/ssfl/templates/admin/manage_photos.jinja2
@@ -93,7 +93,13 @@
                 {% if form.errors %}
                     <ul class="errors">
                         {% for error, val in form.errors.items() %}
-                            <li>{{ error }} : {{ val }}</li>
+                            {% if val is iterable and val is string %}
+                                <li>{{ error }} : {{ val }}</li>
+                            {% else %}
+                                {% for val_el in val %}
+                                     <li>{{ error }} : {{ val_el }}</li>
+                                {% endfor %}
+                            {% endif %}
                         {% endfor %}
                     </ul>
                 {% endif %}
