--- a/ssfl/templates/main/specific_page.jinja2
+++ b/ssfl/templates/main/specific_page.jinja2
@@ -11,7 +11,7 @@
 <section class="container">
     <div class="columns">
         <div class="">
-            <div class="title">{{ story['title'] | safe }}</div>
+{#            <div class="title">{{ story['title'] | safe }}</div>#}
             <div class="message-body">{{ story['body'] | safe }}</div>
         </div>
     </div>
