Download metadata as toml file

--- a/ssfl/templates/admin/miscellaneous_functions.jinja2
+++ b/ssfl/templates/admin/miscellaneous_functions.jinja2
@@ -2,8 +2,8 @@
 <!--
      Route: '/admin/sst_miscellaneous' => miscellaneous_functions
      Template: miscellaneous_functions.jinja2
-     Form: miscellaneous_functions_form.py
-     Processor: miscellaneous_functions.py
+     Form: manage_photos_form.py
+     Processor: upload_photos.py
 -->
 {% extends 'base/layout.jinja2' %}
 
