--- a/ssfl/templates/base/nav.jinja2
+++ b/ssfl/templates/base/nav.jinja2
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3 sticky-top" role="navigation" aria-label="main navigation"
-style="position: sticky">
+     style="position: sticky">
     <div class="container">
         <div class="navbar-brand mr-3">
             <a class="navbar-item" href="https://sunnyside.cc">
@@ -105,7 +105,7 @@ style="position: sticky">
                         <a class="navbar-item" href="{{ url_for('photo_bp.upload_photos') }}">
                             Upload New Photos
                         </a>
-                        <a class="navbar-item" href="{{ url_for('admin_bp.manage_photos') }}">
+                        <a class="navbar-item" href="{{ url_for('photo_bp.manage_photos') }}">
                             Manage Existing Photos
                         </a>
                         <hr class="navbar-divider">
