--- a/ssfl/templates/base/layout.jinja2
+++ b/ssfl/templates/base/layout.jinja2
@@ -23,6 +23,8 @@
             crossorigin="anonymous"></script>
     <script type="text/javascript" src="/static/dist/bundle.js"></script>
     <script type="text/javascript" src="/static/js/sst_javascript.js"></script>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.0/dropzone.min.js"></script>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 
 </head>
