--- a/ssfl/templates/admin/import_docx.jinja2
+++ b/ssfl/templates/admin/import_docx.jinja2
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <!--
      Route: '/admin/sst_import_page' => import_word_docx
      Template: import_docx.jinja2
@@ -11,11 +10,19 @@
     <section class="container">
         <div class="">
             <h3>Import MS Word Page to Database</h3>
-            <form action="{{ url_for('admin_bp.sst_import_page') }}" method="post" enctype="multipart/form-data">
+            <form action="{{ url_for('admin_bp.sst_import_page') }}" method="post"
+                  enctype="multipart/form-data">
                 {% with %}
                     {% set el_name=form.page_name %}
                     {% set el_class="input" %}
                     {% set el_placeholder="Page name (e.g., foo-bar-xx)" %}
+                    {% include 'base/form_entry.jinja2' %}
+                {% endwith %}
+
+                {% with %}
+                    {% set el_name=form.author %}
+                    {% set el_class="input" %}
+                    {% set el_placeholder="Author (to override doc)" %}
                     {% include 'base/form_entry.jinja2' %}
                 {% endwith %}
 
@@ -36,6 +43,7 @@
                 <div class="button">
                     <input id="submit" type="submit" value="Submit">
                 </div>
+
                 {% if form.errors %}
                     <ul class="errors">
                         {% for error, val in form.errors.items() %}
@@ -43,7 +51,7 @@
                                 <li>{{ error }} : {{ val }}</li>
                             {% else %}
                                 {% for val_el in val %}
-                                     <li>{{ error }} : {{ val_el }}</li>
+                                    <li>{{ error }} : {{ val_el }}</li>
                                 {% endfor %}
                             {% endif %}
                         {% endfor %}
@@ -65,6 +73,8 @@
 {#            $('.' + opt).parent().show();#}
 {#        });#}
         //# sourceURL=import_word.js
+
+
 
         </script>
     </section>
